--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     },
     "devDependencies": {
         "@types/react": "^17.0.3",
-        "@types/react-dom": "^17.0.2",
+        "@types/react-dom": "^17.0.3",
+        "@types/react-modal": "^3.16.3",
         "@types/react-router-dom": "^5.3.3",
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
@@ -25,5 +26,9 @@
         "sass-loader": "^12.6.0",
         "ts-loader": "^9.5.1",
         "typescript": "^5.3.3"
+    },
+    "dependencies": {
+        "react-hooks-use-modal": "^3.3.1",
+        "react-modal": "^3.16.1"
     }
 }
